# native-sizeof

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: nodejs.yml  test.yml
__tests__/: integration_tests.spec.js
native/: Cargo.toml
native/src/: lib.rs
scripts/: publish.js
src/: lib.rs
